# fcitx5-azookey

./: .gitignore  Package.swift
Sources/Fcitx5BridgeModule/: BridgingHeader.h  Fcitx5BridgeModule.swift
Sources/KanaKanjiConverterModule/: ComposingText.swift
Sources/KanaKanjiConverterModule/Converter/: ConverisonResult.swift  KanaKanjiConverter.swift
fcitx5-azookey/: CMakeLists.txt  org.fcitx.Fcitx5.Addon.AzooKey.metainfo.xml.in
fcitx5-azookey/po/: CMakeLists.txt  en.po  fcitx5-azookey.pot  ja.po
fcitx5-azookey/src/: AzookeyCandidateList.cpp  AzookeyCandidateList.h  AzookeyEngine.cpp  AzookeyEngine.h  AzookeyState.cpp  AzookeyState.h  CMakeLists.txt  KeyAction.h  azookey-addon.conf.in.in  azookey.conf.in.in  azookey.cpp  azookey.h  keyaction.h
